style.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans');

body, html {
  overflow: hidden;
}

body {
  background-color: #ccc;
  height: 100vh;
  width: 100vw;

}

.download-wrapper {
  height: 300px;
  width: 300px;
  background-color: #00ace6;
  border-radius: 50%;
  transition: background-color 0.2s ease-in-out;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: hand;
  cursor: pointer;
  position: absolute;
  left: calc(50% - 150px);
  top: calc(50% - 150px);
  filter: blur(2px);
}

.download-paragraph-wrapper {
  height: 300px;
  width: 300px;
  border-radius: 50%;
  transition: background-color 0.2s ease-in-out;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: hand;
  cursor: pointer;
  z-index: 3;
  position: absolute;
  left: calc(50% - 150px);
  top: calc(50% - 150px);
}

.download-paragraph-wrapper:hover {
  background-color: #d6d6d6;;
  transition: background-color 0.2s ease-in-out;
}

.download-paragraph-wrapper p {
  filter: blur(1px);
  font-family: 'Open Sans', sans-serif;
  font-size: 32px;
  color: white;
  text-align: center;
}

/*.download-paragraph-wrapper:hover{
  background: red;
}*/

